<?xml version="1.0"?>
<package>
  <name>web_image_view</name>
  <version>0.2.3</version>
  <description>ROS web_video_server image viewer client</description>

  <maintainer email="mr@anassinator.com">Anass Al</maintainer>

  <license>GPLv2</license>

  <url type="website">
    https://github.com/mcgill-robotics/ros-web-image-view
  </url>

  <author email="mr@anassinator.com">Anass Al</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>nodejs</build_depend>
  <run_depend>web_video_server</run_depend>

  <export>
  </export>
</package>
