<?xml version="1.0"?>
<package format="2">
  <name>web_image_view</name>
  <version>0.2.3</version>
  <description>ROS web_video_server image viewer client.</description>

  <maintainer email="dev@anassinator.com">Anass Al</maintainer>

  <license>GPLv2</license>

  <url type="website">
    https://github.com/mcgill-robotics/ros-web-image-view
  </url>

  <author email="dev@anassinator.com">Anass Al</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>nodejs</depend>

  <export> </export>
</package>
